[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/dreamscape/PostBattleMenu.gd" type="Script" id=1]

[node name="PostBattleMenu" type="PanelContainer"]
visible = false
margin_left = 443.552
margin_top = 99.4186
margin_right = 736.552
margin_bottom = 330.419
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 291.0
margin_bottom = 229.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBC"]
margin_right = 289.0
margin_bottom = 18.0
text = "Congratulations!"
align = 1

[node name="CardReward" type="Button" parent="VBC"]
visible = false
margin_top = 21.0
margin_right = 289.0
margin_bottom = 43.0
text = "Draft Card"

[node name="MC" type="MarginContainer" parent="VBC"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_vertical = 3

[node name="Proceed" type="Button" parent="VBC"]
margin_right = 12.0
margin_bottom = 20.0

[node name="CardDraft" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0

[node name="CardChoices" type="GridContainer" parent="CardDraft"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
columns = 5

[connection signal="pressed" from="VBC/CardReward" to="." method="_on_CardReward_pressed"]
[connection signal="pressed" from="VBC/Proceed" to="." method="_on_Proceed_pressed"]
